force-app/main/default/objects/LoanApproval__c/LoanApproval__c.object-meta.xml
<CustomObject>
    <fullName>LoanApproval__c</fullName>
    <label>Loan Approval</label>
    <nameField>
        <displayFormat>LAPPR-{0000}</displayFormat>
        <label>Loan Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>