force-app/main/default/objects/LoanApproval__c/fields/ExternalRefId__c.field-meta.xml
<CustomField>
    <fullName>ExternalRefId__c</fullName>
    <externalId>true</externalId>
    <label>External Reference ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>