force-app/main/default/objects/LoanApproval__c/fields/LoanRequest__c.field-meta.xml
<CustomField>
    <fullName>LoanRequest__c</fullName>
    <label>Loan Request</label>
    <referenceTo>LoanRequest__c</referenceTo>
    <relationshipLabel>Loan Approvals</relationshipLabel>
    <relationshipName>LoanApprovals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>