force-app/main/default/objects/LoanApproval__c/fields/ReceivedResponse__c.field-meta.xml
<CustomField>
    <fullName>ReceivedResponse__c</fullName>
    <label>Received Response</label>
    <type>DateTime</type>
</CustomField>