force-app/main/default/objects/LoanApproval__c/fields/RejectionReason__c.field-meta.xml
<CustomField>
    <fullName>RejectionReason__c</fullName>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>