force-app/main/default/objects/LoanApproval__c/fields/SentToExternal__c.field-meta.xml
<CustomField>
    <fullName>SentToExternal__c</fullName>
    <label>Sent to External System</label>
    <type>DateTime</type>
</CustomField>